Fixes visualization viewport overflow
* wkspacePage.html
 * Remove erroneous comma ensuring css class is no longer ignored

* main.less
 * Adds a viewport for the canvas and provides a border

--- a/vdb-bench-assembly/plugins/vdb-bench/less/main.less
+++ b/vdb-bench-assembly/plugins/vdb-bench/less/main.less
@@ -5,12 +5,15 @@
 }
 
 .vdb-diagram {
+    max-height: 768px;
+    max-width: 1024px;
+    border-left: 1px solid #B1B1B1;
+    border-right: 1px solid #B1B1B1;
+    border-bottom: 1px solid #B1B1B1;
 }
 
 svg {
 	display: block;
-  	width: 100%;
-  	height: 100%;
   	pointer-events: all;
 }
 
